tidy: rename open api generated models
